# cryptic-demo

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  Procfile  README.md  pyproject.toml
demoproject/accounts/: views.py
demoproject/demoproject/: forms.py  settings.py  settings_prod.py  urls.py  utils.py  views.py  wsgi.py
demoproject/demoproject/migrations/: 0002_create_default_users.py
demoproject/demoproject/templatetags/: form_extras.py
demoproject/static/css/: input.css  output.css
demoproject/templates/: index.html  layout.html  login.html  run_demo.html
demoproject/templates/includes/: ascii.html  button.html  card.html  footer.html  header.html  index_post_cards.html  index_style.html
demoproject/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html
