[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptic",
    "django>=5.2.7",
    "django-ratelimit>=4.1.0",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
cryptic = { path = "cryptic/dist/cryptic-0.1.0-py3-none-any.whl" }
